--- a/frontend-design/client.html
+++ b/frontend-design/client.html
@@ -6,32 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>SandwichesWeb</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.3/cerulean/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/Login-Form-Clean.css?h=587ac2057624923cd5be3eaf8b1158cd">
-    <link rel="stylesheet" href="/assets/css/styles.css?h=1ef9f4edf03c0ad247e505c510f71227">
+    <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/Contact-Form-Clean.css?h=c942239c91f94a6b90d67fb2496c21bf">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="/assets/css/styles.css?h=95b571ac51b34320fe259a0333cda295">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md sticky-top">
-        <div class="container"><img id="logo" src="{% static 'sandwichesweb/images/logo.png' %}"><a class="navbar-brand" href="index.html"><strong>Sándwiches&nbsp;Virtual</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><img id="logo" src="/assets/img/logo.png?h=072e3fa6556cbfac8cec1e0c6773bdf5"><a class="navbar-brand" href="/index.html"><strong>SandwichesWeb</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="order.html" style="text-shadow: 0px 0px;">¡Haz tu orden!</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Reportes</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/order.html" style="text-shadow: 0px 0px;">¡Haz tu orden!</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container">
-        <form>
-            <div class="form-group" id="form-group-ci"><input class="form-control" type="number" id="ci-input" name="ci" placeholder="CI"></div>
-            <div class="form-group" id="form-group-fn"><input class="form-control" type="text" id="fn-input" name="first_name" placeholder="Primer nombre"></div>
-            <div class="form-group" id="form-group-mn"><input class="form-control" type="text" id="mn-input" name="middle-name" placeholder="Segundo nombre"></div>
-            <div class="form-group" id="form-group-surname"><input class="form-control" type="text" id="surname-input" name="surname" placeholder="Primer apellido"></div>
-            <div class="form-group" id="form-group-ss"><input class="form-control" type="text" id="ss-input" name="second-surname" placeholder="Segundo apellido"></div>
+    <div id="promo">
+        <div class="jumbotron">
+            <h1><strong>Cliente</strong></h1>
+            <p>Por favor, registre los datos básicos sobre usted, que se piden a continuación</p>
+        </div>
+    </div><!-- Start: Contact Form Clean -->
+    <div class="contact-clean">
+        <form method="post">
+            <div class="form-group" id="form-group-ci"><input class="form-control" type="number" id="ci-input" name="ci" placeholder="CI"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message -->
+            </div>
+            <div class="form-group" id="form-group-fn"><input class="form-control" type="text" id="fn-input" name="first_name" placeholder="Primer nombre"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message -->
+            </div>
+            <div class="form-group" id="form-group-mn"><input class="form-control" type="text" id="mn-input" name="middle-name" placeholder="Segundo nombre (opcional)"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message -->
+            </div>
+            <div class="form-group" id="form-group-surname"><input class="form-control" type="text" id="surname-input" name="surname" placeholder="Primer apellido"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message -->
+            </div>
+            <div class="form-group" id="form-group-ss"><input class="form-control" type="text" id="ss-input" name="second-surname" placeholder="Segundo apellido (opcional)"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message -->
+            </div>
+            <div class="form-group"><a class="btn btn-primary" role="button">Ver resumen de compra</a></div>
         </form>
-    </div>
+    </div><!-- End: Contact Form Clean -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/bs-init.js?h=36ffa0191e9d112d6a97bac11fc65d8e"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 </body>
 
 </html>
