--- a/frontend-design/order.html
+++ b/frontend-design/order.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -7,86 +8,122 @@
     <title>SandwichesWeb</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.3/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/Contact-Form-Clean.css?h=c942239c91f94a6b90d67fb2496c21bf">
+    <link rel="stylesheet" href="{% static 'sandwichesweb/css/Contact-Form-Clean.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="/assets/css/styles.css?h=95b571ac51b34320fe259a0333cda295">
+    <link rel="stylesheet" href="{% static 'sandwichesweb/css/styles.css' %}">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md sticky-top">
-        <div class="container"><img id="logo" src="/assets/img/logo.png?h=072e3fa6556cbfac8cec1e0c6773bdf5"><a class="navbar-brand" href="/index.html"><strong>SandwichesWeb</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><img id="logo" src="{% static 'sandwichesweb/images/logo.png' %}"><a class="navbar-brand" href="{% static 'sandwichesweb/images/logo.png' %}"><strong>SandwichesWeb</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/order.html" style="text-shadow: 0px 0px;">¡Haz tu orden!</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="{% url 'sandwichesweb:order' %}" style="text-shadow: 0px 0px;">¡Haz tu orden!</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div id="promo">
         <div class="jumbotron">
-            <h1><strong>Pedido n°</strong></h1>
+            <h1><strong>Pedido n° {{ order.number }}</strong></h1>
             <p>Seleccione un producto de los listados a continuación</p>
         </div>
     </div>
-    <form class="dark-section">
+    <form class="dark-section" action="{% url 'sandwichesweb:selection' product-id product-type decision %}" method="post">
+        {% csrf_token %}
         <div class="form-group site-section" id="why">
             <h1><strong>Combos</strong></h1>
-            <div class="form-row" id="why-choose-us-row">
-                <div class="col-md-4 item" id="great-taste-column"><img><a href="#" data-toggle="modal" data-target="#myModal">
-                        <h2><strong>Producto</strong></h2>
-                    </a>
-                    <p>40$</p>
+            {% for combo in combo_list %}
+                <div class="form-row" id="why-choose-us-row">
+                    <div class="col-md-4 item" id="great-taste-column">
+                        <img src="{{ combo.photo }}">
+                        <h2><strong>{{ combo.name }}</strong></h2>
+                        <p>{{ combo.price }}</p>
+                        <input type="radio" name="product-id" value="{{ combo.id }}"/>
+                        <input type="hidden" class="form-control" name="product-type" value="combo"/>
+                    </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
         <div class="form-group site-section" id="why-3">
             <h1><strong>Sándwiches</strong></h1>
-            <div class="form-row" id="why-choose-us-row-3">
-                <div class="col-md-4 item" id="great-taste-column-3"><img><a href="#">
-                        <h2>Producto</h2>
-                    </a>
-                    <p>40$</p>
+            {% for sandwich in sandwiches_list %}
+                <div class="form-row" id="why-choose-us-row-3">
+                    <div class="col-md-4 item" id="great-taste-column-3">
+                        <img src="{{ sandwich.photo }}">
+                        <h2>{{ sandwich.size }}</h2>
+                        <p>{{ sandwich.price }}</p>
+                        <input type="radio" name="product-id" value="{{ sandwich.id }}" />
+                        <input type="hidden" class="form-control" name="product-type" value="sandwich"/>
+                    </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
         <div class="form-group site-section" id="why-2">
             <h1><strong>Bebidas</strong></h1>
-            <div class="form-row" id="why-choose-us-row-2">
-                <div class="col-md-4 item" id="great-taste-column-2"><img>
-                    <h6>Jugo</h6><a href="#" data-toggle="modal" data-target="#myModal">
-                        <h2>Producto</h2>
-                    </a>
-                    <p>40$</p>
+            {% for drink in drinks_list %}
+                <div class="form-row" id="why-choose-us-row-2">
+                    <div class="col-md-4 item" id="great-taste-column-2">
+                        <img src="{{ drink.photo }}">
+                        <h6>{{ drink.drink_type }}</h6>
+                        <h2>{{ drink.name }}</h2>
+                        <p>{{ drink.price}}</p>
+                        <input type="radio" name="product-id" value="{{ drink.id }}" />
+                        <input type="hidden" class="form-control" name="product-type" value="drink"/>
+                    </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
         <div class="form-group site-section" id="why-1">
             <h1><strong>Acompañantes</strong></h1>
-            <div class="form-row" id="why-choose-us-row-1">
-                <div class="col-md-4 item" id="great-taste-column-1"><img><a href="#" data-toggle="modal" data-target="#myModal">
-                        <h2>Producto</h2>
-                    </a>
-                    <p>40$</p>
+            {% for side_dish in side_dishes_list %}
+                <div class="form-row" id="why-choose-us-row-1">
+                    <div class="col-md-4 item" id="great-taste-column-1">
+                        <img src="{{ side_dish.photo }}">
+                        <h2>{{ side_dish.name }}</h2>
+                        <p>{{ side_dish.price }}</p>
+                        <input type="radio" name="product-id" value="{{ side_dish.id }}" />
+                        <input type="hidden" class="form-control" name="product-type" value="combo"/>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <p style="text-align: center">
+            <a class="btn btn-primary" role="button" data-toggle="modal" data-target="#myModal">Siguiente</a>
+        </p>
+        <div role="dialog" tabindex="-1" class="modal fade show" id="myModal" style="display: block;">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Siguiente paso</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                    </div>
+                    <div class="modal-body">
+                        <p><strong>¿Desea realizar otro pedido?</strong></p>
+                        <div class="form-check">
+                            <input type="radio" class="form-check-input" id="formCheck-1" name="decision" value="1" />
+                            <label class="form-check-label" for="formCheck-1">
+                                ¡Sí!
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input type="radio" class="form-check-input" id="formCheck-2" name="decision" value="2" />
+                            <label class="form-check-label" for="formCheck-2">
+                                No
+                            </label>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" type="submit">
+                            Siguiente
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </form>
-    <div class="modal fade" role="dialog" tabindex="-1" id="myModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Siguiente paso</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                </div>
-                <div class="modal-body">
-                    <p>¿Desea realizar otro pedido?</p>
-                </div>
-                <div class="modal-footer"><button class="btn btn-light" type="button" data-dismiss="modal">No</button><button class="btn btn-primary" type="button">¡Sí!</button></div>
-            </div>
-        </div>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/bs-init.js?h=36ffa0191e9d112d6a97bac11fc65d8e"></script>
+    <script src="{% static 'sandwichesweb/js/bs-init.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 </body>
 
